--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "request": "^2.74.0"
   },
   "devDependencies": {
-    "eslint": "^3.1.1"
+    "eslint": "^3.1.1",
+    "jsdoc": "^3.4.0"
   }
 }
