--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "request": "^2.74.0"
   },
   "devDependencies": {
+    "@alrra/travis-scripts": "^3.0.1",
     "eslint": "^3.1.1",
     "jsdoc": "^3.4.0",
     "minami": "^1.1.1"
